# agent-nexus

./: .gitignore  LICENSE  README.md  alembic.ini  doc-exchange-steering-template.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
paper/: agentnexus.md
spec/: AGENT_GUIDE.md  STEERING_TEMPLATE.md
src/: bootstrap.py  main.py
src/doc_exchange/: __init__.py
src/doc_exchange/analyzer/: __init__.py  analyzer_service.py  base.py  llm_analyzer.py  rule_engine.py
src/doc_exchange/mcp/: dependencies.py  server.py  tools.py
src/doc_exchange/models/: __init__.py  entities.py
src/doc_exchange/services/: __init__.py  audit_log_service.py  document_service.py  errors.py  file_watcher_service.py  notification_service.py  project_service.py  schemas.py  subscription_service.py  task_service.py  version_retention_service.py
tests/: conftest.py
tests/property/: test_prop_analyzer.py  test_prop_audit.py  test_prop_config.py  test_prop_document.py  test_prop_filewatcher.py  test_prop_mcp.py  test_prop_multitenancy.py  test_prop_notification.py  test_prop_subproject.py  test_prop_subscription.py  test_prop_task.py
tests/unit/: test_analyzer.py  test_audit_log_service.py  test_document_service.py  test_file_watcher_service.py  test_mcp_tools.py  test_milestone_snapshot.py  test_models.py  test_notification_service.py  test_project_service.py  test_publish_draft.py  test_push_pipeline.py  test_subscription_service.py  test_task_service.py  test_version_retention_service.py
